Fix selector and append button and area visible on root element

--- a/src/components/editor/JSONKey.scss
+++ b/src/components/editor/JSONKey.scss
@@ -3,6 +3,7 @@
 
 .key {
   display: inline-block;
+  min-height: $line-height;
 
   &:hover {
     background: $hovered-background;
