--- a/src/components/editor/shared.scss
+++ b/src/components/editor/shared.scss
@@ -3,7 +3,6 @@
 // for key and value
 div.editable-div {
   line-height: $line-height;
-  min-height: $line-height;
   min-width: 16px;
   word-break: normal;
   padding: 0 $input-padding;
